Blackpurl/src/objects/Vendor_Order_Line_Item_Group__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Excess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Excess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_By__c</fullName>
        <label>Need By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <label>Need</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Needed_For__c</fullName>
        <label>Needed For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Vendor Order Line Item Groups</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Item_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Qty</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sublet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sublet Type Vendor Product</description>
        <label>Sublet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Sublet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Vendor Order Line Item Groups</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Item_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unreceived_Qty__c</fullName>
        <formula>Need__c - Received_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unreceived Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOG_Cost__c</fullName>
        <label>VOG Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>Vendor Order Line Item Groups</relationshipLabel>
        <relationshipName>Vendor_Order_Line_Item_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Order Line Item Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VOG-{00000000}</displayFormat>
        <label>Vendor Order Line Item Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Order Line Item Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>